# research-p3-experiment-4

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  jobs.py  manage.py  package.json  requirements.txt  scheduler.py  setup.cfg  setup.py  webpack.config.js  webpack.config.prod.js  worker.py  wsgi.py
digital_logic/: __init__.py  core.py  decorators.py  exceptions.py  factory.py  helpers.py  models.py  mturk.py  redis_session.py  utils.py
digital_logic/accounts/: auth.py  models.py
digital_logic/api/: api.py  parsers.py  serializers.py
digital_logic/assessment/: views.py
digital_logic/dashboard/: views.py
digital_logic/experiment/: _constants.py  business_logic.py  exercise.py  feedback.py  forms.py  models.py  reading.py  service.py  tasks.py  views.py
digital_logic/ext/: markdown_ext.py  passthrough.py  sections.py
digital_logic/templates/: error.html
instance/: conf.py  config.py
migrations/: env.py
migrations/versions/: 1cead0dd8c2b_added_completed_on_to_assignment_table.py  5800d2420705_initial_schema.py  9b90c7b12cf5_initial_schema.py  bc86a5a16227_added_exercise_table_and_bulk_insert.py  cf13935a159c_added_expired_time_to_the_assignment_.py  (+2 more)
tests/: conftest.py  dbfixtures.local.conf  test_algs.py  test_api_exercises.py  test_api_ping.py  test_api_subjects.py  test_api_textbook.py  test_dashboard.py  test_experiment_routes.py  test_helpers.py  test_jinja2_filters.py  test_models.py  test_reading.py  test_service.py  test_user_login.py  utils.py
tests/factories/: __init__.py
(+44 files in other folders)
